force-app/main/default/objects/Google_Calendar_Setting__mdt/Google_Calendar_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Google Calendar Setting</label>
    <pluralLabel>Google Calendar Settings</pluralLabel>
</CustomObject>