force-app/main/default/objects/Google_Calendar_Setting__mdt/fields/Gemini_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Gemini_API_Key__c</fullName>
    <description>Optional Google Gemini / AI API Key for thread summarization.</description>
    <label>Gemini API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>