force-app/main/default/objects/Google_Calendar_Setting__mdt/fields/Gmail_History_Id__c.field-meta.xml
<CustomField>
    <fullName>Gmail_History_Id__c</fullName>
    <description>The latest synced Gmail history ID for incremental sync.</description>
    <label>Gmail History ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>