force-app/main/default/objects/Google_Calendar_Setting__mdt/fields/Gmail_PubSub_Topic__c.field-meta.xml
<CustomField>
    <fullName>Gmail_PubSub_Topic__c</fullName>
    <description>GCP Cloud Pub/Sub Topic for Gmail push notifications (e.g. projects/exalted-justice-507211-v9/topics/gmail-notifications).</description>
    <label>Gmail Pub/Sub Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>