force-app/main/default/objects/Google_Calendar_Setting__mdt/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <description>Stores private key string if using direct key authentication.</description>
    <label>Private Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>