force-app/main/default/objects/Google_Calendar_Setting__mdt/fields/Service_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Email__c</fullName>
    <label>Service Account Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>