force-app/main/default/objects/Google_Calendar_Setting__mdt/fields/Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint__c</fullName>
    <defaultValue>&quot;https://oauth2.googleapis.com/token&quot;</defaultValue>
    <label>Token Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>