force-app/main/default/objects/Google_Calendar_Setting__mdt/fields/Webhook_Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Callback_URL__c</fullName>
    <label>Webhook Callback URL</label>
    <type>Url</type>
</CustomField>