force-app/main/default/objects/Google_Calendar_Setting__mdt/fields/Workspace_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Workspace_User_Email__c</fullName>
    <description>Default Google Workspace user email to impersonate if Salesforce user email is not in the Google Workspace domain.</description>
    <label>Workspace User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>